Fixed alignment

--- a/web/styles/Ex15_css.css
+++ b/web/styles/Ex15_css.css
@@ -45,7 +45,7 @@ h1::first-letter, h2::first-letter{
 }
 
 body{
-    box-shadow: 10px 10px 5px #888888;
+    box-shadow: 10px 10px 5px #000000;
     width: 800px;
     
     margin: auto;
@@ -53,7 +53,7 @@ body{
     border-style: solid;
     border-width: 3px;
     
-    background-image: url("bats.gif");
+    background-image: url("../images/bats.gif");
     
     column-count: 2;
     column-gap: 40px;
@@ -69,19 +69,19 @@ p, h1, h2{
     
 }
 
-main h1{
+article h1{
     clear:both;
     
 }
 
-main{
+article{
     background-color: white;
     padding-bottom: .5em;
     margin-left: 165px;
     top: 0;
     
 }
-#main  a {
+#article  a {
    position: relative;
    display: inline-block;
     
@@ -92,6 +92,8 @@ main{
     float: left;
     margin-top: 130px;
     margin-left: -175px;
+    
+    color:orange;
 
 }
 #cat_pic{
@@ -99,10 +101,11 @@ main{
 }
 
 nav{
-    
-    float: left;
+    position: absolute;
+    background-color: #FFFFFF;
     width: 160px;
-    background-color: #888888; 
+    //background-color: #888888; 
+    height: 100%;
 }
 
 #menu a{
